--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -8,7 +8,7 @@ ul {
 
 li {
     float: left;
-    padding-left: 20px;
+    padding-left: 25px;
 }
 
 li a {
@@ -51,7 +51,7 @@ li a {
     transition: transform 0.75s, -webkit-transform 0.75s;
     max-width: 100%;
     min-height:100%;
-    height: 400px;
+    height: 397px;
     width: 800px;
     background-color: #fafafa;
     padding: 20px;
@@ -69,10 +69,10 @@ li a {
 
   /*search-bar*/
   .search-bar-top-right{
-    height: 30px;
+    height: 20px;
     width: 200px;
     outline: none;
-    border-radius: 5px;
+    border-radius: 3px;
     border: 1px solid #000;
     padding: 2%;
   }
@@ -123,7 +123,7 @@ li a {
     border-bottom: 2px solid #1a7be4;
     background: transparent;
     outline: none;
-    margin-bottom: 5%;
+    margin-bottom: 7%;
 }
 
 .select-selected:after {
@@ -152,16 +152,20 @@ li a {
     color: #fff;
     outline: none;
     border-radius: 3px;
+    position: relative;
+    left: 44%;
   }
-  .button-2{
+  /* .button-2{
     width: 35%;
     height: 40px;
     margin-left: 0px;
     font-size: 19px;
-    background: #ff0037;
+    background: #0258b6;
     color: #fff;
     border: 0;
     outline: none;
     border-radius: 3px;
-  }
+    position: relative;
+    left: 44%;
+  } */
 
