--- a/src/Pagenation/Pagenation.css
+++ b/src/Pagenation/Pagenation.css
@@ -27,7 +27,7 @@
     background: #fff;
     width: 100%;
     height: 37px;
-    box-shadow: 0 5px 5px rgba(0,0,0,0.25), 0 8px 7px rgba(0,0,0,0.22);
+    box-shadow: 0 0px 0px rgba(0,0,0,0.25), 0 33px 12px rgba(0,0,0,0.22)
       
   }
 /* pagenation-start here */
