--- a/src/Pagenation/Pagenation.css
+++ b/src/Pagenation/Pagenation.css
@@ -4,7 +4,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 70px;
+    height: auto;
     margin-left: 0%;
   }
 .navbar a {
@@ -27,7 +27,7 @@
     background: #fff;
     width: 100%;
     height: 37px;
-    box-shadow: 0 0px 0px rgba(0,0,0,0.25), 0 33px 12px rgba(0,0,0,0.22)
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
       
   }
 /* pagenation-start here */
@@ -52,3 +52,4 @@
     background-color: #ddd;
     border-radius: 23%;
 }
+
